--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,25 @@
 <html>
-  <head></head>
+  <head>
+    <title>To-do list</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Create new to-do li items in a ul list from an input using JavaScript">
+    <meta name="keywords" content="JavaScript, javascript, to-do, list, ul, li, input">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
   <body>
-    <h1>Hello world!</h1>
+    <header>
+      <h1>To-do list</h1>
+    </header>
+    <main>
+      <ul class="my-list">
+      </ul>
+
+      <input class="li-input-field" type="text" placeholder="Enter new to-do item">
+      <button class="create-list-item-button">Create</button>
+    </main>
+    <footer>
+      Copyright © 2022
+    </footer>
   </body>
   <script src="./bundle.js"></script>
 </html>
