Show list items count below the button

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
       <ul class="my-list">
       </ul>
 
+      <p>You have <span class="list-items-count"></span> item<span class="plural-items-syntax"></span> on your to-do list!</p>
+
       <input class="li-input-field" type="text" placeholder="Enter new to-do item">
       <button class="create-list-item-button">Create</button>
     </main>
