Link to scss file

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Create new to-do li items in a ul list from an input using JavaScript">
     <meta name="keywords" content="JavaScript, javascript, to-do, list, ul, li, input">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="main.scss" rel="stylesheet">
   </head>
   <body>
     <header>
