--- a/public/index.html
+++ b/public/index.html
@@ -6,21 +6,24 @@
     <meta name="keywords" content="JavaScript, javascript, to-do, list, ul, li, input">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="main.scss" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
   <body>
-    <header>
+    <header class="header">
       <h1>To-do list</h1>
     </header>
-    <main>
+    <main class="main">
+      <div class="create-list-item">
+        <input class="li-input-field" type="text" placeholder="Enter new to-do item">
+        <button class="create-list-item-button"><i class="fas fa-plus"></i></button>
+      </div>
       <ul class="my-list">
       </ul>
 
       <p>You have <span class="list-items-count"></span> item<span class="plural-items-syntax"></span> on your to-do list!</p>
 
-      <input class="li-input-field" type="text" placeholder="Enter new to-do item">
-      <button class="create-list-item-button">Create</button>
     </main>
-    <footer>
+    <footer class="footer">
       Copyright © 2022
     </footer>
   </body>
