Basic css for mobile

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
         <div class="moviesList"></div>
       </main>
       <footer class="footer">
+        Copyright © 2022
       </footer>
     </div>
   </body>
