--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,38 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>Movies list</title>
-    <meta charset="UTF-8" />
-    <meta
-      name="description"
-      content="Create new movies li items in a ul list from an input using JavaScript"
-    />
-    <meta
-      name="keywords"
-      content="JavaScript, javascript, movies, list, ul, li, input"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Web site created using create-react-app" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
+
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>React App</title>
   </head>
   <body>
-    <div class="pageLayout">
-      <header class="header">
-        <h1>Movies List</h1>
-      </header>
-      <main class="main">
-        <div class="searchMovie">
-          <input
-            class="movieInputField"
-            type="text"
-            placeholder="Type the movie's name"
-          />
-          <input type="number" class="yearInputField" min="1900" max="2099" step="1" value="2022" />
-          <button class="searchMoviesButton">
-            Search
-          </button>
-        </div>
-        <div class="moviesList"></div>
-      </main>
-      <footer class="footer">
-        Copyright © 2022
-      </footer>
-    </div>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
   </body>
-  <script src="./bundle.js"></script>
 </html>
